--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -52,7 +52,7 @@
     <div style="display: flex; justify-content: space-between; align-items: center;">
         <h3>List of Lecturer Invigilation Report</h3>
         <div class="button-wrapper">
-            <button id="generatePDF" style="background-color: black;">Download PDF</button>
+            <button id="generatePDF" style="background-color: black;">Download as PDF</button>
         </div>
     </div>
 
