--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -12,7 +12,7 @@
     <div style="display: flex; justify-content: space-between; align-items: center;">
         <h3>Invigilation Timetable</h3>
         <div class="button-wrapper">
-            <button id="generatePDF" style="background-color: black;">Download PDF</button>
+            <button id="generatePDF" style="background-color: black;">Download as PDF</button>
         </div>
     </div>
 
