--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -137,7 +137,7 @@
     <div style="display: flex; justify-content: space-between; align-items: center;">
         <h2>Timetable</h2>
         <div class="button-wrapper">
-            <button id="downloadPDF" style="background-color: black; color: white;">Download PDF</button>
+            <button id="downloadPDF" style="background-color: black; color: white;">Download as PDF</button>
         </div>
     </div>
     <form method="get" action="{{ url_for('admin_manageTimetable') }}">
