--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -97,7 +97,7 @@
     <div style="display: flex; justify-content: space-between; align-items: center;">
         <h2>List of Venue</h2>
         <div class="button-wrapper">
-            <button id="generatePDF" style="background-color: black;">Download PDF</button>
+            <button id="generatePDF" style="background-color: black;">Download as PDF</button>
         </div>
     </div>
     <table class="user-data-table"> 
@@ -242,19 +242,8 @@ document.getElementById("generatePDF").addEventListener("click", function () {
         body: rows,
         startY: startY,
         theme: "grid",
-        styles: {
-            font: "helvetica",
-            fontSize: 9,
-            cellPadding: 4,
-            overflow: "linebreak",
-            valign: "middle",
-            halign: "center"
-        },
-        headStyles: {
-            fillColor: [33, 37, 41],
-            textColor: 255,
-            fontStyle: "bold"
-        },
+        styles: {font: "helvetica", fontSize: 9, cellPadding: 4, overflow: "linebreak", valign: "middle", halign: "center"},
+        headStyles: {fillColor: [33, 37, 41], textColor: 255, fontStyle: "bold"},
         tableWidth: "auto", // Auto-adjust columns based on content
         margin: { top: margin, left: margin, right: margin, bottom: margin },
         didDrawPage: function (data) {
