--- a/app/templates/user/userInvigilationTimetable.html
+++ b/app/templates/user/userInvigilationTimetable.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="menu-section">
     <div class="button-wrapper" style="display: block;">
-        <button id="generatePDF" style="background-color: black;">Download PDF</button>
+        <button id="generatePDF" style="background-color: black;">Download as PDF</button>
     </div>
 
     <div style="display: flex; gap: 15px; align-items: center;">
