--- a/app/templates/user/userOwnTimetable.html
+++ b/app/templates/user/userOwnTimetable.html
@@ -5,6 +5,9 @@
 {% endblock %}
 {% block content %}
 <div class="menu-section">
+    <div class="button-wrapper" style="display: block;">
+        <button id="generatePDF" style="background-color: black;">Download PDF</button>
+    </div>
     <div>
         <!-- Time axis (x-axis header) -->
         <div class="time-header">
@@ -43,4 +46,10 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block extra_scripts %}
+
+
+
 {% endblock %}
