--- a/app/templates/user/userOwnTimetable.html
+++ b/app/templates/user/userOwnTimetable.html
@@ -49,7 +49,28 @@
 {% endblock %}
 
 {% block extra_scripts %}
+<script>
+document.getElementById('generatePDF').addEventListener('click', () => {
+    const { jsPDF } = window.jspdf;
+    const timetable = document.querySelector('.timetable');
 
+    html2canvas(timetable, { scale: 2 }).then(canvas => {
+        const imgData = canvas.toDataURL('image/png');
+        const pdf = new jsPDF('landscape', 'pt', 'a4');
 
+        const pdfWidth = pdf.internal.pageSize.getWidth();
+        const pdfHeight = pdf.internal.pageSize.getHeight();
 
+        // Scale image to fit PDF page
+        const imgProps = pdf.getImageProperties(imgData);
+        const ratio = Math.min(pdfWidth / imgProps.width, pdfHeight / imgProps.height);
+
+        const imgWidth = imgProps.width * ratio;
+        const imgHeight = imgProps.height * ratio;
+
+        pdf.addImage(imgData, 'PNG', 0, 0, imgWidth, imgHeight);
+        pdf.save('timetable.pdf');
+    });
+});
+</script>
 {% endblock %}
