--- a/app/templates/user/userOwnTimetable.html
+++ b/app/templates/user/userOwnTimetable.html
@@ -52,23 +52,29 @@
 <script>
 document.getElementById('generatePDF').addEventListener('click', () => {
     const { jsPDF } = window.jspdf;
-    const timetable = document.querySelector('.timetable');
 
-    html2canvas(timetable, { scale: 2 }).then(canvas => {
+    // Capture the container including timeline
+    const container = document.querySelector('.menu-section');
+
+    html2canvas(container, { scale: 2, useCORS: true }).then(canvas => {
         const imgData = canvas.toDataURL('image/png');
         const pdf = new jsPDF('landscape', 'pt', 'a4');
 
-        const pdfWidth = pdf.internal.pageSize.getWidth();
-        const pdfHeight = pdf.internal.pageSize.getHeight();
+        const pageWidth = pdf.internal.pageSize.getWidth();
+        const pageHeight = pdf.internal.pageSize.getHeight();
+        const margin = 20; // surrounding width
 
-        // Scale image to fit PDF page
+        // Header text
+        pdf.setFontSize(16);
+        pdf.text("{{ user_name }}'s Timetable", margin, 30);
+
+        // Scale image to fit within margins
         const imgProps = pdf.getImageProperties(imgData);
-        const ratio = Math.min(pdfWidth / imgProps.width, pdfHeight / imgProps.height);
-
+        const ratio = Math.min((pageWidth - 2 * margin) / imgProps.width, (pageHeight - 60 - margin) / imgProps.height); 
         const imgWidth = imgProps.width * ratio;
         const imgHeight = imgProps.height * ratio;
 
-        pdf.addImage(imgData, 'PNG', 0, 0, imgWidth, imgHeight);
+        pdf.addImage(imgData, 'PNG', margin, 40, imgWidth, imgHeight);
         pdf.save('timetable.pdf');
     });
 });
