--- a/app/templates/user/userMergeTimetable.html
+++ b/app/templates/user/userMergeTimetable.html
@@ -1,7 +1,7 @@
 {% extends "user/userBase.html" %}
 {% block title %}Timetable{% endblock %}
 {% block head_title %}
-<h2><i>{{ user_department }}</i> - Merge Timetable</h2>
+<h2>{{ user_department }} - Merge Timetable</h2>
 {% endblock %}
 
 {% block content %}
@@ -9,7 +9,7 @@
         <button id="generatePDF" style="background-color: black;">Download PDF</button>
     </div>
     <div> 
-        <form method="get" style="display:flex; align-items:center; gap:8px;">
+        <form method="get" style="display:flex; align-items:center; gap:8px; width: 50%;">
             <label for="lecturer">Select_Lecturer:</label>
             <select name="lecturer" id="lecturer" onchange="this.form.submit()">
                 <option value="">All Lecturers</option>
@@ -103,7 +103,7 @@ $(document).ready(function() {
     });
 });
 
-document.getElementById('downloadPDF')?.addEventListener('click', () => {
+document.getElementById('generatePDF').addEventListener('click', () => {
     const { jsPDF } = window.jspdf;
     const table = document.querySelector('.user-table-container table');
     if (!table) return alert("No timetable table found!");
@@ -126,7 +126,5 @@ document.getElementById('downloadPDF')?.addEventListener('click', () => {
         pdf.save(filename);
     });
 });
-
-
 </script>
 {% endblock %}
