--- a/app/templates/user/userOwnTimetable.html
+++ b/app/templates/user/userOwnTimetable.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="menu-section">
     <div class="button-wrapper" style="display: block;">
-        <button id="generatePDF" style="background-color: black;">Download PDF</button>
+        <button id="generatePDF" style="background-color: black;">Download as PDF</button>
     </div>
     <div>
         <!-- Time axis (x-axis header) -->
