--- a/app/templates/auth/attendance.html
+++ b/app/templates/auth/attendance.html
@@ -7,15 +7,16 @@
 </head>
 
 <body>
-    <form method="POST" style="width: 50%">
+    <form method="POST" style="width: 60%">
         <h1>Attendance Check In/Out</h1>
+        <h3 class="user-info" id="current-datetime"></h3>
         <br>
         <div class="form-container">
             <!-- Frame for Punch Card container -->
             <div class="input-container" style="width: 60%; align-items: center;">
                 <h3>Scan Card</h3>
-                <input type="email" name="login_field" value="{{ login_text }}" required>
-            </div><br>
+                <input style="width: 50%;" type="text" name="cardNumber" value="{{ cardNumber_text }}" required>
+            </div>
         </div>
 
         <div class="user-table-container">
@@ -57,4 +58,17 @@
         </div>
     </form>
 </body>
+
+<script>
+    function updateDateTime() {
+        const now = new Date();
+        const options = { weekday: 'long',day: '2-digit', month: 'short', year: 'numeric',hour: '2-digit', minute: '2-digit', second: '2-digit',hour12: false };
+        const formatted = now.toLocaleString('en-GB', options).replace(',', ':');
+        document.getElementById("current-datetime").textContent = formatted;
+    }
+    updateDateTime(); // initial run
+    setInterval(updateDateTime, 1000); // update every second
+</script>
+
 </html>
+
