--- a/app/templates/auth/attendance.html
+++ b/app/templates/auth/attendance.html
@@ -10,19 +10,18 @@
 
 <body>
     <form method="POST" style="width: 60%; margin: auto;">
+        <h1 class="user-info" id="current-datetime"></1>
         <h1>Attendance Check In/Out</h1>
-        <h3 class="user-info" id="current-datetime"></h3>
-        <br>
 
         <div class="form-container">
-            <div class="input-container" style="width: 60%; display: flex; align-items: center;">
+            <div class="input-container" style="width: 60%; align-items: center;">
                 <h3>Scan Card</h3>
-                <input type="text" name="cardNumber" value="{{ cardNumber_text }}" required style="width: 50%; margin-left: 10px;">
+                <input type="text" name="cardNumber" value="{{ cardNumber_text }}" required style="width: 50%;">
             </div>
         </div>
 
         <div class="user-table-container">
-            <table class="user-data-table" style="width: 100%; border-collapse: collapse;">
+            <table class="user-data-table">
                 <thead>
                     <tr>
                         <th>Exam Details</th>
