--- a/app/templates/auth/attendance.html
+++ b/app/templates/auth/attendance.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    <form method="POST" style="width: 60%; margin: auto;">
-        <div style="max-width: 500px; margin: 30px auto; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); text-align: center;">
-            <h4 id="current-datetime" style="margin-bottom: 10px;"></h4>
-            <h1 style="margin-bottom: 20px;">Attendance Check In/Out</h1>
+    <form method="POST" style="width: 60%;">
+        <div style="max-width: 500px; margin: auto; padding: 2%; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.3);">
+            <h4 id="current-datetime"></h4>
+            <h1>Attendance Check In/Out</h1>
             
-            <div class="input-container" style="margin-bottom: 15px;">
+            <div class="input-container">
                 <h3>Scan Card</h3>
-                <input type="text" name="cardNumber" value="{{ cardNumber_text }}" required style="width: 100%; padding: 10px; font-size: 16px; border-radius: 5px; border: 1px solid #ccc;">
+                <input type="text" name="cardNumber" value="{{ cardNumber_text }}" required style="font-size: 16px;">
             </div>
         </div>
 
