--- a/app/templates/admin/adminProfile.html
+++ b/app/templates/admin/adminProfile.html
@@ -9,6 +9,9 @@
                 <label>Full Name as per IC</label>
                 <input value="{{ admin_data.userName }}" readonly><br>
                 
+                <label>Staff Card UID</label>
+                <input value="{{ admin_data.userCardId }}" readonly><br>
+                
                 <label>Staff ID</label>
                 <input value="{{ admin_data.userId }}" readonly><br>
 
