--- a/app/templates/user/userProfile.html
+++ b/app/templates/user/userProfile.html
@@ -8,6 +8,9 @@
             <div class="form-left">
                 <label>Full Name as per IC</label>
                 <input value="{{ user.userName }}" readonly><br>
+
+                <label>Staff Card UID</label>
+                <input value="{{ user.userCardId }}" readonly><br>
                 
                 <label>Staff ID</label>
                 <input value="{{ user.userId }}" readonly><br>
