--- a/app/templates/user/userBase.html
+++ b/app/templates/user/userBase.html
@@ -40,6 +40,10 @@
                     <i class="fas fa-calendar-check"></i>
                     <span>Merge Timetable</span>
                 </a>
+                <a href="{{ url_for('user_viewStaff') }}" class="tab-link {% if active_tab == 'user_user_viewStafftab' %}active{% endif %}">
+                    <i class="fas fa-user-tie"></i>
+                    <span>View Staff</span>
+                </a>
                 {% endif %}
                 <a href="{{ url_for('user_invigilationTimetable') }}" class="tab-link {% if active_tab == 'user_invigilationTimetabletab' %}active{% endif %}">
                     <i class="fas fa-user-clock"></i>
