--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -59,6 +59,19 @@
             </ul>
         </div>
     </a>
+
+    <a href="{{ url_for('user_viewStaff') }}" style="text-decoration: none;">
+        <div class="menu-section">
+            <h2>Merge Timetable</h2>
+            <ul class="submenu">
+                <strong>Purpose:</strong>
+                <ul>    
+                    <li>- View all department lecturers</li>
+                    <li>- View lecturer details and timetable information</li>
+                </ul>
+            </ul>
+        </div>
+    </a>
 </div>
 {% endif %}
 
