--- a/app/templates/user/userViewStaff.html
+++ b/app/templates/user/userViewStaff.html
@@ -26,7 +26,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for row in lecturer %}
+            {% for row in lecturers %}
             <tr class="
                 {% if row.userStatus == 2 %}
                     inactive-row-show
