--- a/app/templates/user/userBase.html
+++ b/app/templates/user/userBase.html
@@ -40,7 +40,7 @@
                     <i class="fas fa-calendar-check"></i>
                     <span>Merge Timetable</span>
                 </a>
-                <a href="{{ url_for('user_viewStaff') }}" class="tab-link {% if active_tab == 'user_user_viewStafftab' %}active{% endif %}">
+                <a href="{{ url_for('user_viewStaff') }}" class="tab-link {% if active_tab == 'user_viewStafftab' %}active{% endif %}">
                     <i class="fas fa-user-tie"></i>
                     <span>View Staff</span>
                 </a>
