--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -123,7 +123,7 @@
                 <label>Exam Venue(s)</label>
                 <div id="venueContainer">
                     <div class="venue-item" style="display: flex; align-items: center; gap: 8px; margin-bottom: 5px;">
-                        <select name="venue[]" id="editVenue" required>
+                        <select name="venue[]" id="editVenue" class="venue-dropdown" required>
                             <option value="" disabled selected>Select Exam Venue</option>
                             {% for venue in venue_data %}
                                 <option value="{{ venue.venueNumber }}">[Capacity: {{ venue.venueCapacity }}] - {{ venue.venueNumber }}</option>
